# gdev-gemini

./: gcp.yaml  gitlab-ci.yml
infra/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
src/gems/: Procfile  cloudbuild.yaml  pyproject.toml
src/gems/gems/: main.py
src/gems/tests/: api_test.py
