
[tool.poetry]
name = "gems"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
httpx = "^0.27.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
trio = "^0.26.2"
gunicorn = "^23.0.0"
vertexai = "^1.69.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
